[package]
name = "key-spiller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.24"
libc = "0.2.132"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
tokio = { version = "1.21.1", features = ["full"] }
tokio-tungstenite = "0.17.2"
tungstenite = "0.17.3"
x11 = { version = "2.20.0", features = ["xlib"] }
